--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>AngularIntro</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.abe6c43e577272f1.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.abe6c43e577272f1.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.d54d71a8ddae694b.js" type="module"></script><script src="polyfills.91da89978cc4166f.js" type="module"></script><script src="main.41bcc8b65e293edd.js" type="module"></script></body>
+<script src="runtime.d54d71a8ddae694b.js" type="module"></script><script src="polyfills.91da89978cc4166f.js" type="module"></script><script src="main.212e33300dcc9788.js" type="module"></script></body>
 </html>
